--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -12,9 +12,10 @@
     padding: 50px 0;
 }
 .checklist {
-    max-width: 300px;
+    max-width: 400px;
     margin: 0 auto;
     border: 1px dashed #000;
+    background-color: #fff;
 		&__content {
             padding: 20px;
 		}
@@ -43,24 +44,28 @@
 
 		&__item {
             font-size: 16px;
-            padding: 0 0 15px 0;
+            padding: 0 0 20px 0;
             &:last-child{
                 padding: 0;
             }
 		}
 }
 
-
 .item {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     &__text {
+        word-wrap: break-word;
+        max-width: 300px;
     }
 
     &__symbol {
         display: flex;
         flex-direction: row;
+        margin: 0 0 0 5px;
+        user-select: none;
     }
 
     &__cross {
@@ -71,4 +76,9 @@
         cursor: pointer;
         margin: 0 0 0 5px;
     }
+}
+
+.item__text._done{
+    text-decoration: line-through;
+    opacity: 0.5;
 }
